# openai-cli

./: README.rst  setup.cfg
src/openai_cli/: cli.py
