[metadata]
name = johnny
version = 0.0.1
author = Khang5687
author_email = duykhang5687@gmail.com
description = for of Peters Command-line client
long_description = file:README.rst
url = https://example.com/
classifiers =
    Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = true
python_requires = >=3.8
install_requires =
    requests
    click

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    johnny = openai_cli.cli:cli

[bdist_wheel]
universal = 1
